tests/integration/traits/errors/no-type-variables/main.cx
trait N {
  e(self): Number
}

impl N Option {
  e = fun(m) {
    return 0
  }
}
